--- a/package.json
+++ b/package.json
@@ -1,41 +1,32 @@
 {
-  "name": "buildspace-v2",
-  "version": "0.1.0",
-  "private": true,
+  "name": "my-dao",
+  "version": "2.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
+    "@ethersproject/constants": "^5.6.0",
     "@thirdweb-dev/react": "^2.0.3",
     "@thirdweb-dev/sdk": "^2.0.16",
-    "ethers": "^5.6.1",
+    "@types/react": "^17.0.13",
+    "@types/react-dom": "^17.0.8",
+    "@vitejs/plugin-react": "^1.2.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "dotenv": "^16.0.0",
+    "ethers": "^5.6.2",
     "react": "^17.0.2",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "vite": "^2.3.8"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "description": "### **Welcome 👋** ScholarDAO is a DAO built to support university students in web3 built with the thirdweb SDK:",
+  "main": "vite.config.js",
+  "devDependencies": {
+    "node": "^17.7.2"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
